--- a/frontend/src/features/flightBookingComponents/flightbooking.module.css
+++ b/frontend/src/features/flightBookingComponents/flightbooking.module.css
@@ -6,6 +6,7 @@
   display: flex;
   flex-direction: row;
 }
+
 .header {
   margin-top: 3%;
   width: 80%;
@@ -41,7 +42,7 @@
 }
 .fare {
   padding: 1%;
-  width: 22%;
+  width: 25%;
 
   display: flex;
   flex-direction: column;
@@ -53,6 +54,8 @@
 .form {
   gap: 1rem;
   display: flex;
+  /* flex-wrap: wrap; */
+  
   margin-top: 1%;
 
   padding: 2%;
@@ -62,10 +65,12 @@
   border: 1px solid gray;
   padding: 2%;
   border-radius: 5px;
+  display: flex;
+  flex-wrap: wrap;
 }
 .btnPay {
   justify-content: center;
-  width: 20%;
+  min-width: 20%;
   background-color: #065af3;
   color: white;
   padding: 1%;
@@ -75,7 +80,7 @@
   margin-left: 5%;
 }
 .btnSubmit {
-  width: 8%;
+  min-width: 8%;
   background-color: #065af3;
   border: none;
   color: white;
@@ -83,4 +88,46 @@
   /* margin-top: 15px; */
   /* height: fit-content; */
   cursor: pointer;
+}
+@media screen and (max-width:730px) {
+  .form{
+    flex-direction: column;
+  }
+  .form input {
+    width: 100%;
+
+  }
+  
+}
+@media screen and (max-width:750px){
+  .main_cont {
+    flex-direction: column;
+  }
+  .fare{
+    width:78% !important ;
+    margin-top: 10px;
+    margin-bottom: 10px;
+  }
+  .info_cont {
+    /* padding: 1%; */
+    /* background-color: rgb(248, 248, 248); */
+    width: 400px !important;
+    /* margin-right: 1%; */
+  }
+}
+@media screen and (max-width:450px){
+  .main_cont {
+    flex-direction: column;
+  }
+  .fare{
+    width:98% !important ;
+    margin-top: 20px;
+    margin-bottom: 10px;
+  }
+  .info_cont {
+    /* padding: 1%; */
+    /* background-color: rgb(248, 248, 248); */
+    width: 300px !important;
+    /* margin-right: 1%; */
+  }
 }
