--- a/frontend/src/features/flightComponents/singleflight.module.css
+++ b/frontend/src/features/flightComponents/singleflight.module.css
@@ -53,6 +53,9 @@ body {
   padding: 0.5%;
   border-radius: 5px;
   background-color: white;
+  -moz-box-shadow: 0 0 3px #ccc;
+  -webkit-box-shadow: 0 0 3px #ccc;
+  box-shadow: 0 0 6px rgb(158, 156, 156);
 }
 .heading {
   margin: 0px;
@@ -84,6 +87,7 @@ body {
   width: 100%;
   display: flex;
   flex-direction: row;
+  margin-top: 10px;
 }
 .inner_cont {
   width: 13%;
