--- a/frontend/src/features/flightComponents/singleflight.module.css
+++ b/frontend/src/features/flightComponents/singleflight.module.css
@@ -144,14 +144,23 @@ body {
 }
 
 /* Extra small devices (phones, 600px and down) */
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 700px) {
   .box {
     width: 100%;
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
   }
   .filterDiv {
-    display: none;
+    /* display: none; */
+    /* display: flex;
+    flex-direction: row;
+    flex-wrap: wrap; */
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 20px;
+  }
+  .first{
+    width: 250px;
   }
   .container {
     width: 98%;
@@ -173,6 +182,16 @@ body {
     font-weight: 700;
     margin-top: 2%;
     margin-right: 0.5%;
+  }
+}
+/* @media screen and (max-width: 680px) and (min-width: 518px) {
+  .first{
+    width: 250px;
+  }
+} */
+@media only screen and (max-width: 517px) {
+  .first{
+    width:173px;
   }
 }
 
