--- a/frontend/src/features/flightBookingComponents/flightbooking.module.css
+++ b/frontend/src/features/flightBookingComponents/flightbooking.module.css
@@ -1,10 +1,11 @@
 .main_cont {
-  width: 90%;
+  /* width: 90%; */
   padding-left: 10%;
   padding-right: 10%;
 
   display: flex;
   flex-direction: row;
+  
 }
 
 .header {
@@ -12,15 +13,22 @@
   width: 80%;
   padding-left: 11%;
   font-weight: 700;
+
   margin-bottom: 1rem;
+  
 }
 .singlebooking {
   background-color: white;
   padding: 1%;
-  width: 98%;
+  width: 96%;
+  border-radius: 5px;
   display: flex;
   flex-direction: column;
+  -moz-box-shadow: 0 0 3px #ccc;
+  -webkit-box-shadow: 0 0 3px #ccc;
+  box-shadow: 0 0 5px rgb(158, 156, 156);
   gap: 0.5rem;
+  
 }
 .inner_cont {
   padding: 1%;
@@ -36,9 +44,45 @@
 }
 .info_cont {
   padding: 1%;
-  background-color: rgb(248, 248, 248);
+  /* background-color: rgb(248, 248, 248); */
   width: 78%;
   margin-right: 1%;
+  
+  
+}
+.bookingdetails{
+  -moz-box-shadow: 0 0 3px #ccc;
+  -webkit-box-shadow: 0 0 3px #ccc;
+  box-shadow: 0 0 5px rgb(158, 156, 156);
+  /* width: 98%; */
+  /* margin-right: 30px; */
+}
+.formbox{
+  -moz-box-shadow: 0 0 3px #ccc;
+  -webkit-box-shadow: 0 0 3px #ccc;
+  box-shadow: 0 0 2px rgb(158, 156, 156);
+  padding: 1rem;
+  /* width: 98%; */
+  /* margin-right: 30px; */
+}
+.nametraveller{
+  width: 30% !important;
+  display: grid;
+  justify-content: start;
+}
+.importantinformation{
+  -moz-box-shadow: 0 0 3px #ccc;
+  -webkit-box-shadow: 0 0 3px #ccc;
+  box-shadow: 0 0 5px rgb(158, 156, 156);
+  width: 96%;
+  border-radius: 5px;
+}
+.Seatsandmeals{
+  -moz-box-shadow: 0 0 3px #ccc;
+  -webkit-box-shadow: 0 0 3px #ccc;
+  box-shadow: 0 0 5px rgb(158, 156, 156);
+  border-radius: 5px;
+  width: 96%;
 }
 .fare {
   padding: 1%;
@@ -54,12 +98,27 @@
 .form {
   gap: 1rem;
   display: flex;
-  justify-content: space-between;
+  /* justify-content: space-between; */
   /* flex-wrap: wrap; */
   
   margin-top: 1%;
 
   padding: 2%;
+}
+.genderbutton :after, :before {
+  -webkit-tap-highlight-color: transparent !important;
+  padding: 0 !important;
+  margin: 0 !important;
+  -webkit-font-smoothing: antialiased !important;
+  background: rgb(229, 238, 244) !important;
+  box-sizing: border-box;
+}
+.genderbutton{
+  border-color: black !important;
+  border: #53b2fe;
+  /* color: #065af3 !important; */
+  width: 15% !important;
+  /* background: lightcyan !important; */
 }
 .form input {
   width: 50%;
@@ -88,6 +147,8 @@ background-image: linear-gradient(97deg,#53b2fe,#065af3 130%);
   height: 44px;
   cursor: pointer;
   margin-left: 5%;
+  margin-bottom: 2rem;
+  
 }
 .btnSubmit {
   max-width: 8%;
@@ -104,9 +165,7 @@ background-image: linear-gradient(97deg,#53b2fe,#065af3 130%);
     justify-content: center;
 }
 @media screen and (max-width:930px) {
-  .form{
-    flex-direction: column;
-  }
+  
   .form input {
     width: 100%;
 
@@ -118,6 +177,14 @@ background-image: linear-gradient(97deg,#53b2fe,#065af3 130%);
   
 }
 @media screen and (max-width:750px){
+  .form{
+    flex-direction: column;
+  }.nametraveller{
+    width: 100% !important;
+  }
+  .genderbutton{
+    width: 30% !important;
+  }
   .main_cont {
     flex-direction: column;
   }
