--- a/frontend/src/Components/flight.module.css
+++ b/frontend/src/Components/flight.module.css
@@ -1,11 +1,12 @@
 .flight_wrapper {
-  background: linear-gradient(
-    to top,
+  /* background: linear-gradient( */
+    /* to top,
     rgb(14, 38, 172) 0%,
     rgb(2, 8, 97) 50%,
     rgb(12, 3, 97) 50%,
     rgb(0, 1, 32) 100%
-  );
+  ); */
+  background-image: linear-gradient(0deg,#15457b,#051423);
   padding: 1px;
   position: relative;
   /* border: 1px solid green; */
