--- a/frontend/src/features/flightBookingComponents/flightbooking.module.css
+++ b/frontend/src/features/flightBookingComponents/flightbooking.module.css
@@ -57,6 +57,13 @@
   /* width: 98%; */
   /* margin-right: 30px; */
 }
+.Seatsandmealsdetails{
+  -moz-box-shadow: 0 0 3px #ccc;
+  -webkit-box-shadow: 0 0 3px #ccc;
+  box-shadow: 0 0 5px rgb(158, 156, 156);
+  width: 96%;
+  /* margin-right: 30px; */
+}
 .formbox{
   -moz-box-shadow: 0 0 3px #ccc;
   -webkit-box-shadow: 0 0 3px #ccc;
@@ -115,7 +122,7 @@
 }
 .genderbutton{
   border-color: black !important;
-  border: #53b2fe;
+  border: #151616 !important;
   /* color: #065af3 !important; */
   width: 15% !important;
   /* background: lightcyan !important; */
@@ -137,6 +144,7 @@ background-image: linear-gradient(97deg,#53b2fe,#065af3 130%);
   color: white;
   padding: 1%;
   border-radius: 35px;
+  margin-top: 15px;
   border: none;
   font-size: calc(var(--font-scale, 1 )*16px);
   font-family: inherit;
@@ -164,6 +172,16 @@ background-image: linear-gradient(97deg,#53b2fe,#065af3 130%);
   display: grid;
     justify-content: center;
 }
+.bookingheadbg{
+  background-image: linear-gradient(0deg,#15457b,#051423);
+}
+.inputdetails{
+  width: 100%;
+}
+.sendtouser{
+  display: flex;
+  flex-direction: row !important;
+}
 @media screen and (max-width:930px) {
   
   .form input {
@@ -177,6 +195,17 @@ background-image: linear-gradient(97deg,#53b2fe,#065af3 130%);
   
 }
 @media screen and (max-width:750px){
+  .inputdetails{
+    width: 100%;
+  }
+  .btnPay{
+max-width: 35%;
+    
+  }
+  .sendtouser{
+    display: flex;
+    flex-direction: column !important;
+  }
   .form{
     flex-direction: column;
   }.nametraveller{
