--- a/frontend/src/features/flightBookingComponents/flightbooking.module.css
+++ b/frontend/src/features/flightBookingComponents/flightbooking.module.css
@@ -177,6 +177,8 @@ background-image: linear-gradient(97deg,#53b2fe,#065af3 130%);
 }
 .inputdetails{
   width: 100%;
+  height: 3rem;
+  border-radius: 5px;
 }
 .sendtouser{
   display: flex;
