--- a/frontend/src/Components/flight.module.css
+++ b/frontend/src/Components/flight.module.css
@@ -36,9 +36,11 @@
   justify-content: flex-end;
   font-size: bold;
 }
-@media only screen and (max-width: 820px) {
+@media only screen and (max-width: 900px) {
   .book {
-    display: none;
+    /* display: none; */
+    /* margin-top: 10px; */
+    margin-bottom: 10px;
   }
 }
 .multiple_trip {
@@ -281,18 +283,18 @@
 
 @media only screen and (max-width: 1320px) {
 
-  .fromToConnecting {
+  /* .fromToConnecting {
     margin: auto;
     margin-bottom: 20px;
-  }
+  } */
   
-  .travellerContainer {
+  /* .travellerContainer {
     width: 30%;
     padding-left: 4px;
     margin-top: 20px;
     padding-bottom: 4px;
     margin-bottom: 15px;
-  }
+  } */
 }
 @media only screen and (max-width: 1020px) {
   .bookingSearch > div:nth-child(1){
@@ -307,6 +309,11 @@
     width: 47%;
     
   }
+    .fromToConnecting {
+    margin: auto;
+    margin-bottom: 20px;
+  }
+  
 
   .travellerContainer{
     flex-grow: 1;
@@ -319,7 +326,13 @@
 @media only screen and (max-width: 1050px) {
   .fromToConnecting {
     margin-left: 1%;
+    
    
+  }
+  .DepRetContainer{
+    margin-left: auto;
+    margin-right: auto;
+    
   }
   
 
@@ -328,6 +341,8 @@
     left: 32%;
   }
 }
+
+
 @media only screen and (max-width: 500px) {
   .traveller_modal {
     /* position: absolute; */
@@ -345,6 +360,7 @@
     /* border: 1px solid red; */
     padding: 15px;
   }
+  
   .buttonContainer {
     bottom: 5%;
     left: 25%;
@@ -392,4 +408,34 @@
   /* border: 1px solid red; */
   padding: 15px;
 }
+}
+@media screen and (max-width:600px) {
+  .fromTo {
+    display: flex;
+    flex-direction: column;
+    z-index: 1;
+
+  }
+  .from{
+    margin-bottom: 5px;
+    margin-top: 10px;
+
+  }
+  .to{
+    margin-top: 5px;
+    margin-bottom: 10px;
+
+  }
+  .DepRetContainer{
+    margin-bottom: 10px;
+    gap: 10px !important;
+  }
+  .buttonContainer{
+    margin-top: 30px;
+  }
+  .book{
+    justify-content: flex-start;
+    margin-top: 10px;
+  
+    }
 }
