--- a/frontend/src/features/Home/FirstSection.css
+++ b/frontend/src/features/Home/FirstSection.css
@@ -123,20 +123,49 @@ box-shadow: 0 0 3px rgb(53, 49, 49);
 
     
 }
-@media only screen and (max-width: 500px) {
+@media only screen and (max-width: 550px) {
     .radiobutton,.radiobutton1,.radiobutton2
     {
-        height: 55px;
+        /* height: 55px !important; */
+        display: flex;
+        min-width: auto !important;
+        min-height: 100% !important;
+        max-height:150% !important ;
+        border-radius: 5px !important;
+        padding: 15px !important;
+        justify-content: space-between !important;
+        /* margin-bottom: 10px; */
         /* padding: 2rem; */
     }
+    .onewaytitle{
+        font-size: 12px !important;
+        font-weight: 500 !important;
+        /* font-size:14px; */
+        position: relative;
+        bottom: 8px !important;
+        margin-left: 2px;
+    }
+    
+    .onewayinput{
+        /* font-size: x-large; */
+        /* margin-left: 5px !important; */
+        /* font-weight: bold;
+        font-size:14px; */
+        position: relative;
+         bottom:5px !important;
+        /* margin-left: 2px;  */
+        /* display: none; */
+    }
 }
-/* .radiobutton,.radiobutton1,.radiobutton2:hover{
-color: green !important;
-} */
-/* .radiobutton,.radiobutton1,.radiobutton2:hover{
-    background-color: rgb(225, 225, 225) !important;
+@media only screen and (max-width: 435px) {
+    .radiobutton,.radiobutton1,.radiobutton2
+    {
+        margin-top: 10px;
+        min-height:5.5rem !important;
+        display: flex;
+        flex-direction: column;
+    }}
 
-} */
 div.vertical-line{
     width: 1px; /* Line width */
     border-right: 1px solid lightgray !important;
@@ -150,6 +179,14 @@ div.vertical-line{
 
 /* oneway */
 .onewaytitle{
+    /* font-size: x-large; */
+    font-weight: bold;
+    font-size:14px;
+    position: relative;
+    bottom: 11px;
+    margin-left: 2px;
+}
+.onewayinput{
     /* font-size: x-large; */
     font-weight: bold;
     font-size:14px;
