--- a/frontend/src/Components/flight.module.css
+++ b/frontend/src/Components/flight.module.css
@@ -406,6 +406,9 @@
   /* border: 1px solid red; */
   padding: 15px;
 }
+.travellerContainer{
+  z-index: 10;
+}
 }
 @media screen and (max-width:600px) {
   .fromTo {
