--- a/frontend/src/features/Trips/Trips.css
+++ b/frontend/src/features/Trips/Trips.css
@@ -10,6 +10,7 @@
     /* box-shadow: 0 8px 8px 5px rgb(10 10 10 / 4%); */
     width: 90%;
     border-radius: 10px;
+   
     padding: 50px;
     position: absolute;
     top: 25%;
@@ -212,6 +213,10 @@
         display: flex;
         flex-direction: column;
         height: 300px;
+    }
+    .bookedFlightCard{
+        flex-direction: column;
+        width: 120%;
     }
 
     .titleContainer{
