--- a/frontend/src/features/flightComponents/Search.css
+++ b/frontend/src/features/flightComponents/Search.css
@@ -26,6 +26,9 @@ border: #000 !important;
 .farerow3{
   padding-right: 1rem;
 }
+.css-hfutr2-MuiSvgIcon-root-MuiSelect-icon {
+  color: #fff !important;
+}
 
 .searchrow{
     /* background-color: rgb(10, 10, 42); */
