--- a/frontend/src/features/flightComponents/singleflight.module.css
+++ b/frontend/src/features/flightComponents/singleflight.module.css
@@ -2,18 +2,21 @@ body {
   background-color: #e5eef4;
 }
 .box {
-  width: 90%;
+  width: 100%;
   padding-left: 5%;
-  padding-right: 5%;
-  margin-top: 2%;
+  /* padding-right: 5%; */
+  /* margin-top: 2%; */
   display: flex;
   flex-direction: row;
   margin-bottom: 2%;
+  background: #e5eef4;
 }
 .container {
-  width: 70%;
+  /* width: 70%; */
   display: flex;
   flex-direction: column;
+  margin-top: 60px;
+  
 }
 .filterCheck {
   /* display: block; */
@@ -24,11 +27,16 @@ body {
 }
 .filterDiv {
   background-color: white;
+  margin-top: 60px;
   width: 20%;
   border-radius: 5px;
   margin-right: 2%;
   padding: 2%;
   height: fit-content;
+  -moz-box-shadow: 0 0 3px #ccc;
+  -webkit-box-shadow: 0 0 3px #ccc;
+  box-shadow: 0 0 6px rgb(158, 156, 156);
+  
 }
 .first {
   display: flex;
@@ -48,14 +56,16 @@ body {
   cursor: pointer;
 }
 .singleflight {
-  margin-top: 3%;
+  margin-top: 2%;
   height: fit-content;
   padding: 1%;
   border-radius: 5px;
+  /* width: 100%; */
   background-color: white;
   -moz-box-shadow: 0 0 3px #ccc;
   -webkit-box-shadow: 0 0 3px #ccc;
   box-shadow: 0 0 6px rgb(158, 156, 156);
+
 }
 .heading {
   margin: 0px;
@@ -91,13 +101,27 @@ body {
   width: 100%;
   display: flex;
   flex-direction: row;
-  margin-top: 10px;
+  margin-top: 5px;
+  /* padding: 10px; */
+}
+.imgairline{
+  margin-top: 0;
+  width: 25px;
+  height: 25px;
+
+
 }
 .inner_cont {
-  width: 13%;
+  width: 20%;
+  
+   /* width: 16%; */
+
   margin: 0px;
   margin-right: 4%;
   padding: 0px;
+}
+.singleflight_divsec__wCNKE {
+  width: 80% !important;
 }
 .discount {
   background-color: rgb(255, 237, 209);
@@ -120,15 +144,21 @@ body {
   padding: 10px;
   background-image: linear-gradient(to right, rgb(255, 255, 255), rgb(232, 253, 233)) !important;
 }
+.css-hfutr2-MuiSvgIcon-root-MuiSelect-icon {
+  color: #08e917 !important;
+}
+
 .buttonBookNow {
-  width: 13%;
+  width: 97px !important;
   margin: 0px;
   margin-right: 5%;
   padding: 15px !important;
   font-size: 14px;
   font-weight: 700;
   margin-top: 2%;
-  color:black !important;
+  border-radius: 35px !important;
+  color:#fff !important;
+  background-image: linear-gradient(97deg,#53b2fe,#065af3 130%);
 }
 .details {
   padding: 1%;
@@ -138,34 +168,54 @@ body {
   cursor: pointer;
 }
 .line {
-  border-top: 3px solid rgb(81, 226, 194);
+  border-top: 3px solid  #50e3c2;
   width: 55%;
   margin: 10% 0% 0% 0%;
+  opacity: 1.25;
+  display: grid;
+  justify-content: center;
+  /* display: block; */
   /* height: 2px; */
+}
+.divsec{
+  display: flex;
+  flex-direction: row !important;
+  width:80%;
 }
 
 /* Extra small devices (phones, 600px and down) */
-@media only screen and (max-width: 700px) {
+@media only screen and (max-width: 720px) {
   .box {
     width: 100%;
     display: flex;
     flex-direction: column;
+  }
+  .guidelines,.sort{
+    margin-bottom: 10px;
   }
   .filterDiv {
     /* display: none; */
     /* display: flex;
     flex-direction: row;
     flex-wrap: wrap; */
+    margin-left: -9px;
     display: grid;
+    width: 100%;
     grid-template-columns: 1fr 1fr;
     gap: 20px;
+    margin-right: 2%;
+    margin-bottom: 5px;
+    -moz-box-shadow: 0 0 3px #ccc;
+    -webkit-box-shadow: 0 0 3px #ccc;
+    box-shadow: 0 0 4px rgb(158, 156, 156);
   }
   .first{
     width: 250px;
   }
   .container {
     width: 98%;
-    font-size: 10px;
+    
+    /* font-size: 10px; */
   }
   .singleflight {
     width: 100% !important;
@@ -175,9 +225,16 @@ body {
     padding: 2%;
     margin: 1%;
     width: 95%;
+    border-radius: 30px !important;
+    display: flex;
+    flex-direction: column;
+    
+  }.inner_cont{
+    width: 20%;
+    margin-top: 10px;
   }
   .guidelineText {
-    font-size: 6px;
+    font-size: 6rem ;
   }
   .buttonBookNow {
     width: 10%;
@@ -188,20 +245,62 @@ body {
     margin-top: 2%;
     margin-right: 0.5%;
   }
+  .divsec{
+    width: 100%;
+  }
 }
 /* @media screen and (max-width: 680px) and (min-width: 518px) {
   .first{
     width: 250px;
   }
 } */
-@media only screen and (max-width: 517px) {
+@media only screen and (max-width: 580px) {
   .first{
     width:173px;
+  }
+  .maincontainer {
+    padding: 0%;
+    margin: 0%;
+    width: 95%;
+    border-radius: 30px !important;
+    
+  }
+  .btnbook{
+    display: none;
+  }
+  .box{
+    padding-left: 2%;
+  }
+  .inner_cont {
+    /* width: 28%; */
+    margin: 0px;
+    margin-right: 4%;
+    padding: 0px;
+    margin-top: 10px;
+    display: grid;
+    justify-content: center;
   }
 }
 @media only screen and (max-width: 417px) {
   .first{
     width:153px;
+  }
+  .maincontainer {
+    padding: 1%;
+    margin: 0%;
+    width: 95%;
+    border-radius: 30px !important;
+  }
+  .imgairline{
+    width: 30px;
+    height: 30px;
+    display: inline-block;
+    background-position: center center;
+    background-size: contain;
+  }
+  .container {
+    width: 98%;
+    font-size: 12px;
   }
 }
 /* Medium devices (landscape tablets, 768px and up) */
