--- a/frontend/src/features/flightBookingComponents/flightbooking.module.css
+++ b/frontend/src/features/flightBookingComponents/flightbooking.module.css
@@ -131,8 +131,10 @@
  
 }
 
-.genderbutton:active{
+.genderbutton:active::before{
   background-color: lightblue !important;
+  opacity: .4 !important; 
+  z-index: 5 !important;
   /* box-shadow: 0 5px #F68B8B; */
 transform: translateY(4px);
 }
@@ -207,11 +209,52 @@ background-image: linear-gradient(97deg,#53b2fe,#065af3 130%);
 .bookingheadbg{
   background-image: linear-gradient(0deg,#15457b,#051423);
 }
+.form-control {
+  background-color: rgb(253, 214, 214) !important;
+  color: rgb(104, 7, 60) !important;
+  height: 55px !important;
+  width: 100% !important;
+}
+.react-tel-input {
+  margin-top: 10px !important;
+  margin-left: 10px !important;
+}
+
+
 .inputdetails{
   width: 100%;
   height: 3rem;
   border-radius: 5px;
+  border-color: grey !important;
+  outline: none !important;
 }
+.react-tel-input ,.form-control {
+  position: relative !important;
+  font-size: 14px;
+  letter-spacing: .01rem;
+  margin-top: 0 !important;
+  margin-bottom: 0 !important;
+  padding-left: 48px;
+  margin-left: 0;
+  background: #FFFFFF;
+  border: 1px solid #CACACA;
+  border-radius: 5px;
+  line-height: 25px;
+  height: 48px !important;
+  width: 100% !important;
+
+  outline: none;
+}
+
+input:focus {
+  outline: none ! important;
+  border-color: #719ECE;
+  box-shadow: 0 0 10px #719ECE;
+  }
+  textarea:focus {
+  outline: none ! important;
+  border-color: #719ECE;
+  }
 .sendtouser{
   display: flex;
   flex-direction: row !important;
