--- a/frontend/src/features/flightBookingComponents/flightbooking.module.css
+++ b/frontend/src/features/flightBookingComponents/flightbooking.module.css
@@ -127,9 +127,19 @@
   /* color: #0087ca; */
   cursor: pointer;
   /* margin: 1rem; */
-  padding: 10px;
+  /* padding: 10px; */
+  /* width: 10% !important; */
  
 }
+.clicked {
+  background-color: orange;
+}
+
+/* .genderbutton:focus{
+  background-color: skyblue !important;
+  color: #fff !important;
+} */
+
 
 .genderbutton:active::before{
   background-color: lightblue !important;
@@ -209,16 +219,8 @@ background-image: linear-gradient(97deg,#53b2fe,#065af3 130%);
 .bookingheadbg{
   background-image: linear-gradient(0deg,#15457b,#051423);
 }
-.form-control {
-  background-color: rgb(253, 214, 214) !important;
-  color: rgb(104, 7, 60) !important;
-  height: 55px !important;
-  width: 100% !important;
-}
-.react-tel-input {
-  margin-top: 10px !important;
-  margin-left: 10px !important;
-}
+
+
 
 
 .inputdetails{
