logo anf favicon changed

--- a/frontend/src/Components/navbar.module.css
+++ b/frontend/src/Components/navbar.module.css
@@ -166,6 +166,10 @@
 .navbarContent {
     
 }
+.logoimg{
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
 
     .hamburgr_menu {
         display: block;
