--- a/frontend/src/Components/flight.module.css
+++ b/frontend/src/Components/flight.module.css
@@ -45,9 +45,10 @@
 }
 /* fromcol */
 .fromcol{
-  border: 1px solid grey !important;
+  border: 1px solid lightgray !important;
   border-radius: 10px;
-  max-height: 6rem;
+  max-height: 5rem;
+  min-height: 5rem !important;
 }
 .select{
   z-index: 99950;
@@ -55,6 +56,14 @@
   bottom: 2.9rem;
   margin-bottom: 0;
 }
+.hey {
+  min-height: 5rem !important;
+  background-color: lightblue !important;
+  border-radius: 7px;
+}
+
+
+
 .select:visited{
 display: none;
 }
@@ -132,6 +141,7 @@ display: none;
   
   flex-grow: 0.3;
   width: 20%;
+  
 
  
 }
