--- a/frontend/src/Hotels/Footer.module.css
+++ b/frontend/src/Hotels/Footer.module.css
@@ -97,6 +97,8 @@ font-weight: 900;
 @media only screen and (max-width:580px) {
 .container{
     margin-bottom: 2rem;
+    max-height: 8rem;
+    min-height: 6rem;
     /* padding: 5rem; */
 }
 .twitter{
