--- a/frontend/src/features/flightComponents/FirstSection.css
+++ b/frontend/src/features/flightComponents/FirstSection.css
@@ -165,6 +165,18 @@ box-shadow: 0 0 3px rgb(53, 49, 49);
         display: flex;
         flex-direction: column;
     }}
+@media only screen and (max-width: 900px) {
+    .radiobutton,.radiobutton1,.radiobutton2
+    {
+        /* margin-top: -2rem;
+        margin-bottom: 0 !important; */
+        margin: 0;
+        top: 0%;
+
+    }
+}
+
+
 
 div.vertical-line{
     width: 1px; /* Line width */
